fixed title alignment problem

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ Text Domain: educator
 Template: educator
 */
 
+.edgt-content .edgt-content-inner .edgt-container .edgt-container-inner {
+  padding-top: 0px !important;
+}
+
 .cds-no-pic-spacer {
   margin-top: 30px;
 }
@@ -89,12 +93,12 @@ ul, li {
 }
 
 .edgt-sidebar {
-  padding-top: 30px;
+ /* padding-top: 30px;*/
 }
 
 @media (min-width: 1024px) {
   .edgt-sidebar {
-    padding-top: 27px;
+    /*padding-top: 27px;*/
   }
 }
   
@@ -108,7 +112,7 @@ ul, li {
 }
 
 .edgt-title-holder {
-  height: 30px !important;
+  height: 100% !important;
   padding-top: 0px !important;
 }
 
@@ -122,7 +126,6 @@ blockquote:before {
   font-style: italic;
   padding-top: 0px; 
   margin-top: 0px;
-  /*margin-top: 60px;*/ 
   text-align: center;
   font-size: 27px;
   line-height: 1.0em;
@@ -143,8 +146,7 @@ blockquote:before {
 @media (max-width: 500px) {
   .cds-block-quote,
   .cds-block-quote-full-width {
-    margin-top: 0px;
-    font-size: 15px;
+    font-size: 22px;
   }
 
   .cds-block-quote p,
@@ -157,7 +159,6 @@ blockquote:before {
   .cds-block-quote,
   .cds-block-quote-full-width {
     padding-top: 0px; 
-    margin-top: 0px; 
   }
 
   .cds-block-quote {
@@ -329,18 +330,18 @@ blockquote:before {
 }
 
 .edgt-grid-row .edgt-page-content-holder.edgt-content-right {
-  padding-top: 15px;
+  /*padding-top: 15px;*/
 }
 
 @media (max-width: 500px) {
   .edgt-grid-row .edgt-page-content-holder.edgt-content-right {
-    padding-top: 0px;
+    /*padding-top: 0px;*/
   }
 }
 
 @media (min-width: 1024px) {
   .edgt-grid-row .edgt-page-content-holder.edgt-content-right {
-    padding-top: 27px;
+    /*padding-top: 27px;*/
   }
 }
 
@@ -660,6 +661,10 @@ cds-pdf-thumb p {
   .edgt-title-wrapper .edgt-grid {
     max-width: 800px;
   }
+}
+
+.edgt-title-wrapper .edgt-grid {
+  max-width: default;
 }
 
 table, table tbody tr, table thead tr, tbody, tr, td {
